--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 read1.py - converts one sequence into SVM format.
 Single_sequence - converts training sequence and testing sequence to SVM format. It also uses SVM to predict classification of the test sequence(inconsistent number of samples)
+seq-data.txt - single sequence used for training
+test.txt - single sequence used for testing.
