--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Single_sequence - converts training sequence and testing sequence to SVM format.
 seq-data.txt - single sequence used for training
 test.txt - single sequence used for testing.
 single_seq_corrected.py - A program which converts training and testing sequence into SVM format and predicts the class of the test sequence(final predictor for single sequence)
+model.py- creates a model for prediction using the file seq-data.txt
+test-seq.py- Converts testing sequence into binary and calls model. It then predicts topolgy of the sequence used as test. The file testing.txt has contains sequence to be predicted.
